--- a/real_code/frontend/www/index.html
+++ b/real_code/frontend/www/index.html
@@ -37,7 +37,7 @@
     <header>
         <a href="/" id="header-title">WM Concepts</a>
         <nav>
-            <a href="/clients_page.html">Clients</a>
+            <a href="/client_page.html">Clients</a>
             <a href="/dev_page.html">Developers</a>
             <a href="/mentor_page.html">Mentors</a>
         </nav>
