completing the last change, I hope

--- a/real_code/frontend/www/client_page.html
+++ b/real_code/frontend/www/client_page.html
@@ -37,13 +37,13 @@
     <header>
         <a href="/" id="header-title">WM Concepts</a>
         <nav>
-            <a href="/clients">Clients</a>
-            <a href="/developers">Developers</a>
-            <a href="/mentors">Mentors</a>
-        </nav>
+            <a href="/client_page.html">Clients</a>
+            <a href="/dev_page.html">Developers</a>
+            <a href="/mentor_page.html">Mentors</a>
+       </nav>
     </header>
 
     TBD
-    
+
 </body>
 </html>
