--- a/real_code/frontend/www/dev_page.html
+++ b/real_code/frontend/www/dev_page.html
@@ -37,9 +37,9 @@
     <header>
         <a href="/" id="header-title">Building the next Generation of Coders</a>
         <nav>
-            <a href="/clients">Clients</a>
-            <a href="/developers">Developers</a>
-            <a href="/mentors">Mentors</a>
+            <a href="/client_page.html">Clients</a>
+            <a href="/dev_page.html">Developers</a>
+            <a href="/mentor_page.html">Mentors</a>
         </nav>
     </header>
     
