updated homepage styling

--- a/real_code/frontend/www/index.html
+++ b/real_code/frontend/www/index.html
@@ -43,29 +43,32 @@
         </nav>
     </header>
     
-    <h1 class="motto">Building Applications for the next generation with the next generation </h1>
+    <h1 class="motto">Building applications for the next generation, with the next generation </h1>
 
     <div class="about">
-        <h2>Overview</h2>
-        <p>Looking for a development team to deliver your project? WM Concepts delivers cloud software projects on-time and under budget by leveraging a vast network of junior developers paired with senior developers/mentors. We can deliver your project more cost-effectively and you can help build the next generation of developers. Our senior developers have decades of experience building applications on AWS and Google Cloud.</p>
-
-        <p>Our senior developers have worked on a variety of cloud projects for the financial industry, hotel industry, and others. They have years of experience working on and deploying cloud applications.</p>
-
         <h2>Our Expertise</h2>
-        <p>Our developers and mentors have experience in:</p>
-        <ul>
-            <li>Web applications</li>
-            <li>Google and AWS</li>
-            <li>Mobile development</li>
-            <li>Machine learning</li>
-        </ul>
+        <div class="expertise-container">
+            <div class="expertise-left">
+                <p>Web Apps</p>
+                <p>GCP/AWS</p>
+                <p>Mobile Apps</p>
+                <p>Machine Learning</p>
+            </div>
+            
+            <div class="expertise-right">
+                <p>Looking for a development team to deliver your project? WM Concepts delivers cloud software projects on-time and under budget by leveraging a vast network of junior developers paired with senior developers/mentors. We can deliver your project more cost-effectively and you can help build the next generation of developers. Our senior developers have decades of experience building applications on AWS and Google Cloud Platform.</p>
+                <p>Our senior developers have worked on a variety of cloud projects for the financial industry, hotel industry, and others. They have years of experience working on and deploying cloud applications.</p>
+            </div>
+        </div>
 
         <h2>Our Projects </h2>
-        <img src="" alt="show some screen captures of projects if possible"/>
-        <p>We are ready to assist you with your development needs.</p>
+        <div class="projects-container">
+            <p>We are ready to assist you with your development needs.</p>
+            <img src="" alt="show some screen captures of projects if possible"/>
+        </div>
 
         <h2>WM Concepts Process</h2>
-        <p>We pair junior developers with experienced senior developers to meet our deadlines and goals. By doing this, we can develop applications more cost cost-effectively and teach the next generation programming principles. We use the latest tools including AI coding tools. </p>
+        <p class="process">We pair junior developers with experienced senior developers to meet our deadlines and goals. By doing this, we can develop applications more cost-effectively and teach the next generation programming principles. We use the latest tools including AI coding tools. </p>
 
         <div class="home-container">
             <div class="section">
